--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
+	<!--SEO META-->
+
+	<meta name="description" content="Desde aca te contactaras con nosotros la mejor empresa de sistemas y tecnologias ">
+	<meta name="keywords" content="sistemas,tecnologias,programacion,camaras,seguridad,contacto,numero,celular,email">
+	<meta name="author" content="julian sanchez">
+
+
+	<!--SEO META FIN-->
+
+
     <title>Sistemas y Tecnologias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
