--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
+	<!--SEO META-->
+
+	<meta name="description" content="Somos una empresa de Sistemas y Tecnologias nos dedicamos a la actualizacion de la misma ">
+	<meta name="keywords" content="sistemas,tecnologias,programacion,camaras,seguridad,informacion">
+	<meta name="author" content="julian sanchez">
+
+
+	<!--SEO META FIN-->
+
     <title>Sistemas y Tecnologias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
