--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<a class="navbar-brand" href="../index.html">
 				<img src="./imagenes/icon.png" alt="foto">
 			</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+			<button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
